--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,10 @@
 {
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   }
