--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
   "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "body-parser": "^1.19.0",
+    "axios": "^1.11.0",
+    "mercadopago": "^1.5.8",
+    "firebase-admin": "^13.4.0"
+  },
   "scripts": {
     "start": "node server.js"
-  },
-  "dependencies": {
-    "axios": "^1.11.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
   }
 }
