--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,19 @@
   "description": "Backend para catálogo de clientes con Mercado Pago",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.19.0",
-    "axios": "^1.11.0",
-    "mercadopago": "^1.5.8",
-    "firebase-admin": "^13.4.0"
+    "body-parser": "^1.20.2",
+    "axios": "^1.6.2",
+    "mercadopago": "^2.0.5",
+    "firebase-admin": "^11.11.1",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "dotenv": "^16.3.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "engines": {
     "node": ">=16.0.0"
