--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,18 @@
 {
   "name": "catalogo-backend",
   "version": "1.0.0",
-  "description": "Backend para catálogo de clientes con Mercado Pago",
+  "description": "Backend para catálogo de clientes con Stripe",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
     "axios": "^1.6.2",
-    "mercadopago": "^2.0.5",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "firebase-admin": "^11.11.1",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1"
+    "stripe": "^14.25.0"
   },
   "scripts": {
     "start": "node server.js",
