--- a/firebase.json
+++ b/firebase.json
@@ -1,42 +1,29 @@
 {
-  "name": "soft-duck-catalog",
-  "version": "1.0.0",
-  "description": "Catálogo de productos premium SOFT DUCK con React",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   },
-  "dependencies": {
-    "@stripe/react-stripe-js": "^4.0.0",
-    "@stripe/stripe-js": "^2.4.0",
-    "firebase": "^10.7.1",
-    "lucide-react": "^0.294.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.20.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.1.1",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^5.0.0"
-  },
-  "keywords": [
-    "react",
-    "ecommerce",
-    "catalog",
-    "soft-duck",
-    "firebase",
-    "stripe"
-  ],
-  "author": "SOFT DUCK",
-  "license": "ISC"
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
 }
